force-app/main/default/objects/Contact/fields/ULBC_Acquisition_Channel__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Acquisition_Channel__c</fullName>
    <label>Acquisition Channel</label>
    <type>Picklist</type>
    <description>How this contact was first acquired.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Alumni</fullName><default>false</default><label>Alumni</label></value>
            <value><fullName>Athlete</fullName><default>false</default><label>Athlete</label></value>
            <value><fullName>Event</fullName><default>false</default><label>Event</label></value>
            <value><fullName>Referral</fullName><default>false</default><label>Referral</label></value>
            <value><fullName>Digital</fullName><default>false</default><label>Digital</label></value>
            <value><fullName>Stripe Donation</fullName><default>false</default><label>Stripe Donation</label></value>
            <value><fullName>Stripe Event Registration</fullName><default>false</default><label>Stripe Event Registration</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>