force-app/main/default/objects/Contact/fields/ULBC_Alumni_Type__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Alumni_Type__c</fullName>
    <label>Alumni Type</label>
    <type>Picklist</type>
    <description>UK-based or international alumni. Used for segmentation and event invitations.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>UK</fullName><default>true</default><label>UK</label></value>
            <value><fullName>Global</fullName><default>false</default><label>Global</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>