force-app/main/default/objects/Contact/fields/ULBC_Birth_Name__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Birth_Name__c</fullName>
    <label>Birth Name</label>
    <type>Text</type>
    <length>100</length>
    <description>Birth/maiden name. Used when a contact has changed surname e.g. Jade Robinson to Jade Smith.</description>
</CustomField>