force-app/main/default/objects/Contact/fields/ULBC_Donor_Tier__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Donor_Tier__c</fullName>
    <label>Donor Tier</label>
    <type>Picklist</type>
    <description>Auto-calculated donor tier based on rolling 12-month giving. Decision 1.8.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Prospect</fullName><default>true</default><label>Prospect</label></value>
            <value><fullName>Standard</fullName><default>false</default><label>Standard</label></value>
            <value><fullName>Patron</fullName><default>false</default><label>Patron</label></value>
            <value><fullName>Major</fullName><default>false</default><label>Major</label></value>
            <value><fullName>Lapsed</fullName><default>false</default><label>Lapsed</label></value>
            <value><fullName>Legacy Prospect</fullName><default>false</default><label>Legacy Prospect</label></value>
            <value><fullName>Legacy Pledger</fullName><default>false</default><label>Legacy Pledger</label></value>
            <value><fullName>Legator</fullName><default>false</default><label>Legator</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>