force-app/main/default/objects/Contact/fields/ULBC_Follow_Up_Notes__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Follow_Up_Notes__c</fullName>
    <label>Follow Up Notes</label>
    <type>LongTextArea</type>
    <length>10000</length>
    <description>Follow-up notes for fundraising or engagement actions. Migrated from FileMaker. Phase 4.</description>
</CustomField>