force-app/main/default/objects/Contact/fields/ULBC_Gap_To_Next_Tier__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Gap_To_Next_Tier__c</fullName>
    <label>Gap to Next Tier</label>
    <type>Currency</type>
    <precision>10</precision>
    <scale>2</scale>
    <description>How much more the donor needs to give to reach the next tier. Shown in upgrade email.</description>
</CustomField>