force-app/main/default/objects/Contact/fields/ULBC_GDPR_Legal_Basis__c.field-meta.xml
<CustomField>
    <fullName>ULBC_GDPR_Legal_Basis__c</fullName>
    <label>GDPR Legal Basis</label>
    <type>Picklist</type>
    <description>UK GDPR legal basis for holding and processing this contact data. All imported contacts default to Legitimate Interests. Decision 1.13.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Legitimate Interests — membership relationship</fullName><default>true</default><label>Legitimate Interests — membership relationship</label></value>
            <value><fullName>Consent</fullName><default>false</default><label>Consent</label></value>
            <value><fullName>Contract</fullName><default>false</default><label>Contract</label></value>
            <value><fullName>Legal Obligation</fullName><default>false</default><label>Legal Obligation</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>