force-app/main/default/objects/Contact/fields/ULBC_Gender__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <description>Self-identified gender. Jade Smith is stored as Male in FileMaker — must be corrected to Female on import.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Female</fullName><default>false</default><label>Female</label></value>
            <value><fullName>Male</fullName><default>false</default><label>Male</label></value>
            <value><fullName>Non-binary</fullName><default>false</default><label>Non-binary</label></value>
            <value><fullName>Prefer not to say</fullName><default>false</default><label>Prefer not to say</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>