force-app/main/default/objects/Contact/fields/ULBC_Gift_Aid_Declaration_Date__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Gift_Aid_Declaration_Date__c</fullName>
    <label>Gift Aid Declaration Date</label>
    <type>Date</type>
    <description>Date the Gift Aid declaration was received. Required when Gift Aid Eligible = true. Phase 2C.</description>
</CustomField>