force-app/main/default/objects/Contact/fields/ULBC_Gift_Aid_Declaration_Source__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Gift_Aid_Declaration_Source__c</fullName>
    <label>Gift Aid Declaration Source</label>
    <type>Picklist</type>
    <description>How the Gift Aid declaration was obtained. Required for HMRC audit trail. Phase 2C.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Online</fullName><default>false</default><label>Online</label></value>
            <value><fullName>Written Letter</fullName><default>false</default><label>Written Letter</label></value>
            <value><fullName>Verbal</fullName><default>false</default><label>Verbal</label></value>
            <value><fullName>Telephone</fullName><default>false</default><label>Telephone</label></value>
            <value><fullName>Form / Tick Box</fullName><default>false</default><label>Form / Tick Box</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>