force-app/main/default/objects/Contact/fields/ULBC_Gift_Aid_Eligible__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Gift_Aid_Eligible__c</fullName>
    <label>Gift Aid Eligible</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True when a valid Gift Aid declaration is on file. Decision 1.10 — registered under ULBC Trust Limited. Phase 2C.</description>
</CustomField>