force-app/main/default/objects/Contact/fields/ULBC_Gift_Aid_Postcode__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Gift_Aid_Postcode__c</fullName>
    <label>Gift Aid Postcode</label>
    <type>Text</type>
    <length>10</length>
    <description>UK postcode at time of Gift Aid declaration. Required by HMRC for audit. Stored separately in case contact has since moved. Phase 2C.</description>
</CustomField>