force-app/main/default/objects/Contact/fields/ULBC_Gift_Aid_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Gift_Aid_Valid_From__c</fullName>
    <label>Gift Aid Valid From</label>
    <type>Date</type>
    <description>Date from which the Gift Aid declaration is valid. Can backdate up to 4 years per HMRC rules. Phase 2C.</description>
</CustomField>