force-app/main/default/objects/Contact/fields/ULBC_Gift_Aid_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Gift_Aid_Valid_To__c</fullName>
    <label>Gift Aid Valid To</label>
    <type>Date</type>
    <description>Date the declaration expires. Leave blank for open-ended declarations. Set when donor cancels or declaration lapses. Phase 2C.</description>
</CustomField>