force-app/main/default/objects/Contact/fields/ULBC_Gone_Away__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Gone_Away__c</fullName>
    <label>Gone Away</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True when postal or email contact has bounced. Phase 2 trigger will set HasOptedOutOfEmail = true. Maps from FileMaker GoneAway field.</description>
</CustomField>