force-app/main/default/objects/Contact/fields/ULBC_Is_Donor__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Is_Donor__c</fullName>
    <label>Is Donor</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Additive flag. Set to true when first Opportunity is recorded. Decision 1.11.</description>
</CustomField>