force-app/main/default/objects/Contact/fields/ULBC_Is_Tyrian_Member__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Is_Tyrian_Member__c</fullName>
    <label>Is Tyrian Member</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Additive flag. Tyrian is the alumni rowing club with its own separate subscription. Decision 1.4, 1.9.</description>
</CustomField>