force-app/main/default/objects/Contact/fields/ULBC_Is_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Is_Volunteer__c</fullName>
    <label>Is Volunteer</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Additive flag. When true, ULBC_Volunteer_Since__c must be populated. Validation rule enforces this.</description>
</CustomField>