force-app/main/default/objects/Contact/fields/ULBC_Last_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Last_Gift_Date__c</fullName>
    <label>Last Gift Date</label>
    <type>Date</type>
    <description>Date of most recent closed-won Opportunity. Used to calculate Lapsed status (no gift in 24 months).</description>
</CustomField>