force-app/main/default/objects/Contact/fields/ULBC_Legacy_Membership__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Legacy_Membership__c</fullName>
    <label>Legacy Membership</label>
    <type>Text</type>
    <length>100</length>
    <description>Historical membership subtype from FileMaker database. One-time import, not auto-updated. For reference only.</description>
</CustomField>