force-app/main/default/objects/Contact/fields/ULBC_Next_Tier_Threshold__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Next_Tier_Threshold__c</fullName>
    <label>Next Tier Threshold</label>
    <type>Currency</type>
    <precision>10</precision>
    <scale>2</scale>
    <description>Annual giving threshold for the next tier. Used in upgrade email template.</description>
</CustomField>