force-app/main/default/objects/Contact/fields/ULBC_Other_Interests__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Other_Interests__c</fullName>
    <label>Other Interests</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>Non-rowing interests. Migrated from FileMaker. Phase 4.</description>
</CustomField>