force-app/main/default/objects/Contact/fields/ULBC_Patron_Status__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Patron_Status__c</fullName>
    <label>Patron Status</label>
    <type>Picklist</type>
    <description>Patron programme membership status. Independent of auto-calculated Donor Tier. Set manually by admin.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Non-Patron</fullName><default>true</default><label>Non-Patron</label></value>
            <value><fullName>Patron</fullName><default>false</default><label>Patron</label></value>
            <value><fullName>Honorary Patron</fullName><default>false</default><label>Honorary Patron</label></value>
            <value><fullName>Lapsed Patron</fullName><default>false</default><label>Lapsed Patron</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>