force-app/main/default/objects/Contact/fields/ULBC_Primary_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Primary_Contact_Type__c</fullName>
    <label>Primary Contact Type</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Single evolving primary classification. Athlete-Student to Alumni is one-way on graduation. All imported FileMaker contacts default to Alumni. Decision 1.11, 1.12.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Athlete-Student</fullName><default>false</default><label>Athlete-Student</label></value>
            <value><fullName>Alumni</fullName><default>true</default><label>Alumni</label></value>
            <value><fullName>Parent</fullName><default>false</default><label>Parent</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>