force-app/main/default/objects/Contact/fields/ULBC_Profession__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Profession__c</fullName>
    <label>Profession</label>
    <type>Text</type>
    <length>255</length>
    <description>Current or most recent profession. Migrated from FileMaker. Phase 4.</description>
</CustomField>