force-app/main/default/objects/Contact/fields/ULBC_Rolling_12m_Giving__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Rolling_12m_Giving__c</fullName>
    <label>Rolling 12-Month Giving</label>
    <type>Currency</type>
    <precision>10</precision>
    <scale>2</scale>
    <description>Sum of closed-won Opportunities in the rolling 12-month window. Updated by ULBC_DonorTierEngine.</description>
</CustomField>