force-app/main/default/objects/Contact/fields/ULBC_School__c.field-meta.xml
<CustomField>
    <fullName>ULBC_School__c</fullName>
    <label>School</label>
    <type>Text</type>
    <length>100</length>
    <description>Secondary school attended.</description>
</CustomField>