force-app/main/default/objects/Contact/fields/ULBC_Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Secondary_Email__c</fullName>
    <label>Secondary Email</label>
    <type>Email</type>
    <description>Secondary email address. Primary email is the standard Contact Email field.</description>
</CustomField>