force-app/main/default/objects/Contact/fields/ULBC_Special_Skills__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Special_Skills__c</fullName>
    <label>Special Skills</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>Special skills or expertise relevant to the club. Migrated from FileMaker. Phase 4.</description>
</CustomField>