force-app/main/default/objects/Contact/fields/ULBC_Stripe_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Stripe_Customer_ID__c</fullName>
    <description>Stripe Customer ID (cus_XXX) for this Contact. Populated by the Stripe webhook receiver on first payment. Used as one of the matching keys in Decision 5.8 (priority 2).</description>
    <externalId>true</externalId>
    <label>Stripe Customer ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
</CustomField>