force-app/main/default/objects/Contact/fields/ULBC_Subscription_Lapsed_Date__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Subscription_Lapsed_Date__c</fullName>
    <label>Subscription Lapsed Date</label>
    <type>Date</type>
    <description>Date subscription lapsed from FileMaker.</description>
</CustomField>