force-app/main/default/objects/Contact/fields/ULBC_Subscription_Last_Change__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Subscription_Last_Change__c</fullName>
    <label>Subscription Last Change</label>
    <type>Date</type>
    <description>Date of last subscription change from FileMaker.</description>
</CustomField>