force-app/main/default/objects/Contact/fields/ULBC_Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Subscription_Start_Date__c</fullName>
    <label>Subscription Start Date</label>
    <type>Date</type>
    <description>Date of first subscription from FileMaker.</description>
</CustomField>