force-app/main/default/objects/Contact/fields/ULBC_Tier_Progress_Pct__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Tier_Progress_Pct__c</fullName>
    <label>Tier Progress %</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <description>Rolling 12m giving as % of next tier threshold. Used in upgrade email progress bar.</description>
</CustomField>