force-app/main/default/objects/Contact/fields/ULBC_Trust_ID__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Trust_ID__c</fullName>
    <label>Trust ID</label>
    <type>Text</type>
    <length>50</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <description>Master migration key linking all FileMaker tables. External ID enabling upserts on data load and Stripe integration.</description>
</CustomField>