force-app/main/default/objects/Contact/fields/ULBC_Upgrade_Prospect__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Upgrade_Prospect__c</fullName>
    <label>Upgrade Prospect</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Set to true when rolling 12m giving reaches 80% of tier ceiling. Triggers upgrade email alert to fundraiser.</description>
</CustomField>