force-app/main/default/objects/Contact/fields/ULBC_Volunteer_Since__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Volunteer_Since__c</fullName>
    <label>Volunteer Since</label>
    <type>Date</type>
    <description>Date volunteering began. Must not be populated unless Is Volunteer is true. Enforced by validation rule.</description>
</CustomField>