force-app/main/default/objects/Contact/fields/ULBC_Year_Group__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Year_Group__c</fullName>
    <label>Year Group</label>
    <type>Text</type>
    <length>10</length>
    <description>Graduation or cohort year from FileMaker.</description>
</CustomField>