force-app/main/default/objects/Contact/listViews/AddParticipantsListView.listView-meta.xml
<ListView>
    <fullName>AddParticipantsListView</fullName>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>ULBC_Trust_ID__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <filterScope>Mine</filterScope>
    <label>Add Participants View</label>
</ListView>