force-app/main/default/objects/Contact/listViews/ULBC_Current_Athletes.listView-meta.xml
<ListView>
    <fullName>ULBC_Current_Athletes</fullName>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>ULBC_Gender__c</columns>
    <columns>ULBC_Primary_Contact_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ULBC_Primary_Contact_Type__c</field>
        <operation>equals</operation>
        <value>Athlete-Student</value>
    </filters>
    <label>Current Athletes</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>